공부한 내용 추가

--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -194,6 +194,19 @@
 
 ---
 
+- loadAverage의 의미
+  - running 상태의 (CPU 자원이 많이 필요하는) 프로세스의 수와 uninterruptible 상태의 (I/O 자원이 많이 필요하는) 프로세스의 수를 합한 값. 
+  - 즉, CPU를 사용하자고 해도 다른 프로세스가 CPU를 사용하고 있어서 기다리고 있는 프로세스 와 디스크 입출력이 끝날때 까지 기다려야만 하는 프로세스 두가지로 나타내어지는 값이다.
+  - Load Average 값은 CPU의 코어수에 따라서 숫자가 달라지며 각 CPU 코어가 100% Load가 발생할 경우, 1 코어는 값 1, 2코어는 값 2, 4코어는 값 4로 표현이 됩니다.
+    - 시스템 운영시 권장하는 에버리지는 70%인 0.7 이하 이며 그 이상일 경우 시스템에 이상이 없는지 반드시 체크를 해야합니다.
+    - 참고로 1코어에서 2라는 숫자가 나올 수도 있는데 이것의 의미는 100%는 로드된 상태 100%는 대기하는 상태를 뜻합니다.
+    - https://kim-dragon.tistory.com/45#:~:text=Load%20Average%EB%9E%80%20%EC%96%BC%EB%A7%88%EB%82%98%20%EB%A7%8E%EC%9D%80,%ED%8F%89%EA%B7%A0%EB%82%B8%20%EA%B0%92%EC%9D%84%20%EB%A7%90%ED%95%A9%EB%8B%88%EB%8B%A4.
+  - https://injae-kim.github.io/dev/2020/07/09/how-to-check-single-server-load-average.html
+  - https://brunch.co.kr/@dreaminz/1
+  - https://velog.io/@jahoy/%EC%84%9C%EB%B9%84%EC%8A%A4-%EC%84%B1%EB%8A%A5-%ED%96%A5%EC%83%81%EC%9D%84-%EC%9C%84%ED%95%9C-%EC%84%9C%EB%B2%84-%EB%B6%80%ED%95%98-%EB%B0%8F-%EB%A6%AC%EC%86%8C%EC%8A%A4-%EB%AA%A8%EB%8B%88%ED%84%B0%EB%A7%81-%EB%B0%A9%EB%B2%95
+
+---
+
 - 기타 팁
   - 사용중인 소켓 확인 명령어
     - `cat /proc/net/sockstat`
@@ -223,6 +236,13 @@
   - `sysctl -a`
     - /etc/sysctl.conf 또는 /etc/sysctl.d/sys_tune.conf 에 있는 리눅스 커널 파라미터들 볼 수 잇음
     - `-p`옵션을 사용해서 runtime되고있는 리눅스 커널에 적용할 수있음(필요할때 꼭 좀 더 찾아서 해볼것..)
+  - `vmstat`
+    - 현재 메모리 및 CPU의 사용률을 알 수 있는 툴
+    - r은 실행되기를 기다리거나 실행중인 프로세스 갯수
+    - b는 uninterruptible sleep 상태의 프로세스로 IO를 위해 대기열에 있는 프로세스의 갯수
+    - 이를 통해서 loadAverage가 높은 원인이 CPU 리소스 부하(r)인지, IO부하(b)인지를 확인할수 있다 
+  - top 설명
+    - ![](2023-07-03-13-32-12.png)
 
 
 - 기타 참고사이트
