--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -223,9 +223,14 @@
       - Recv-Q
         - Established: The  count  of  bytes  not copied by the user program connected to this socket.  
         - Listening: Since Kernel 2.6.18 this column contains the ***current syn backlog***.
+          - `ss -l` 사용시 Listening 하는 소켓만 볼 수 있음
       - Send-Q
         - Established: The count of bytes not acknowledged by the remote host.  
         - Listening: Since Kernel 2.6.18 this column contains the ***maximum size of the syn backlog***.
+      - 참고
+        - Established 일때, Recv-Q와 Send-Q를 통해서 어느쪽에서 데이터를 느리게 가져가는지 알 수 있다
+          - Recv-Q가 지속적으로 높다면, user program이 데이터를 읽어가는 속도가 느리다는 의미 (receive buffer와의 관계는 좀더 확인이 필요할듯)
+          - Send-Q가 지속적으로 높다면, 소켓에 연결된 상대방이 응답을 계속 보내고있지않은 상태, 즉, 상대방 서버에 문제가 있음을 추측할 수 있다
   - `netstat -na`
     ```c
       tcp6       0      0 127.0.0.1:8001          :::*                    LISTEN
@@ -250,3 +255,4 @@
   - [네트워크관련 참고하면 너무 좋은사이트](https://d2.naver.com/helloworld/47667)
   - [nginx 관련 서버튜닝](https://ohjongsung.io/2020/04/11/nginx-tuning-%EC%A0%95%EB%A6%AC)
   - [nginx 및 서버튜닝 관련해서 잘 나옴.. 나중에 정리할것](https://couplewith.tistory.com/m/entry/%EA%BF%80%ED%8C%81-%EA%B3%A0%EC%84%B1%EB%8A%A5-Nginx%EB%A5%BC%EC%9C%84%ED%95%9C-%ED%8A%9C%EB%8B%9D-3-TCP-%EA%B4%80%EB%A0%A8-%EC%B2%98%EB%A6%AC%EB%9F%89-%EB%8A%98%EB%A6%AC%EA%B8%B0-%EB%A6%AC%EB%88%85%EC%8A%A4%EC%BB%A4%EB%84%90%ED%8A%9C%EB%8B%9D)
+  - [tcp 관련 서버 튜닝](https://waspro.tistory.com/406)
