--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -201,8 +201,13 @@
     - 시스템 운영시 권장하는 에버리지는 70%인 0.7 이하 이며 그 이상일 경우 시스템에 이상이 없는지 반드시 체크를 해야합니다.
     - 참고로 1코어에서 2라는 숫자가 나올 수도 있는데 이것의 의미는 100%는 로드된 상태 100%는 대기하는 상태를 뜻합니다.
     - https://kim-dragon.tistory.com/45#:~:text=Load%20Average%EB%9E%80%20%EC%96%BC%EB%A7%88%EB%82%98%20%EB%A7%8E%EC%9D%80,%ED%8F%89%EA%B7%A0%EB%82%B8%20%EA%B0%92%EC%9D%84%20%EB%A7%90%ED%95%A9%EB%8B%88%EB%8B%A4.
-  - https://injae-kim.github.io/dev/2020/07/09/how-to-check-single-server-load-average.html
+  - [설명매우좋음](https://injae-kim.github.io/dev/2020/07/09/how-to-check-single-server-load-average.html)
   - https://brunch.co.kr/@dreaminz/1
+    - `$ uptime`
+    - `$ /proc/loadavg`
+  - [load average 계산방법](https://lunatine.net/2016/02/19/about-load-average/)
+    - 매우 딥한데 후반부에 가면 간단하게 설명나옴
+   - https://scoutapm.com/blog/understanding-load-averages
   - https://velog.io/@jahoy/%EC%84%9C%EB%B9%84%EC%8A%A4-%EC%84%B1%EB%8A%A5-%ED%96%A5%EC%83%81%EC%9D%84-%EC%9C%84%ED%95%9C-%EC%84%9C%EB%B2%84-%EB%B6%80%ED%95%98-%EB%B0%8F-%EB%A6%AC%EC%86%8C%EC%8A%A4-%EB%AA%A8%EB%8B%88%ED%84%B0%EB%A7%81-%EB%B0%A9%EB%B2%95
 
 ---
@@ -249,6 +254,11 @@
   - top 설명
     - ![](2023-07-03-13-32-12.png)
 
+- swap
+  - [적정 Swap 용량?](https://access.redhat.com/ko/solutions/744483)
+    - 16~64GB 메모리는 8GB정도의 swap 공간을 사용할것을권고
+  - [프로세스별 swap 사용확인](https://ninetin.tistory.com/30)
+  
 
 - 기타 참고사이트
   - https://meetup.toast.com/posts/54
@@ -256,3 +266,7 @@
   - [nginx 관련 서버튜닝](https://ohjongsung.io/2020/04/11/nginx-tuning-%EC%A0%95%EB%A6%AC)
   - [nginx 및 서버튜닝 관련해서 잘 나옴.. 나중에 정리할것](https://couplewith.tistory.com/m/entry/%EA%BF%80%ED%8C%81-%EA%B3%A0%EC%84%B1%EB%8A%A5-Nginx%EB%A5%BC%EC%9C%84%ED%95%9C-%ED%8A%9C%EB%8B%9D-3-TCP-%EA%B4%80%EB%A0%A8-%EC%B2%98%EB%A6%AC%EB%9F%89-%EB%8A%98%EB%A6%AC%EA%B8%B0-%EB%A6%AC%EB%88%85%EC%8A%A4%EC%BB%A4%EB%84%90%ED%8A%9C%EB%8B%9D)
   - [tcp 관련 서버 튜닝](https://waspro.tistory.com/406)
+
+
+  - [Memory buffer와 Cache 간단 개념](https://jaynamm.tistory.com/entry/%EB%A9%94%EB%AA%A8%EB%A6%AC-Buffer-%EC%99%80-Cache-%EC%9D%B4%ED%95%B4%ED%95%98%EA%B8%B0)
+  - [cpu iowait 참고](https://seaking.tistory.com/28)
