--- a/리눅스/유용한 리눅스 명령어.md
+++ b/리눅스/유용한 리눅스 명령어.md
@@ -25,6 +25,17 @@
 - dns에 등록된 도메인도 아니고, hosts파일 셋팅하기 어려울떄.. (ssl테스트하기좋음)
   - curl -v --resolve [도메인주소].com:443:[실제 IP] https://[도메인주소]
 
+- swap 메모리 초기화
+  - 명령을 통해 Swap 메모리 사용에 대하여 Free 로 가능하며, SwapOff를 하게되면 Swap out -> Swap in 되면서 실제 Physical Memory로 넘어가게됨
+    - `$ swapoff -a` : 스왑초기화 (여기서 swap in)
+    - `$ swapon -a`
+  - https://kikiho.tistory.com/entry/Linux-Swap-%EB%A9%94%EB%AA%A8%EB%A6%AC-%EC%B4%88%EA%B8%B0%ED%99%94-%ED%95%98%EA%B8%B0
+
+- 문자열 대체
+  - sed 사용하자
+  - https://kggo.tistory.com/161
+
 - [grep 명령어 예시 굿](https://inpa.tistory.com/entry/LINUX-%F0%9F%93%9A-%EC%A0%95%EA%B7%9C%ED%91%9C%ED%98%84%EC%8B%9D-%EA%B3%BC-grep-%EB%AA%85%EB%A0%B9%EC%96%B4-%EC%A0%95%EB%B3%B5%ED%95%98%EA%B8%B0-%ED%8C%A8%ED%84%B4-%EA%B2%80%EC%83%89-%ED%99%95%EC%9E%A5%EB%B8%8C%EB%9E%98%ED%82%B7)
 - [awk 명령어 예시 굿](https://inpa.tistory.com/entry/LINUX-%F0%9F%93%9A-awk-%EB%AA%85%EB%A0%B9%EC%96%B4-%EB%AC%B8%EB%B2%95-%EB%A7%88%EC%8A%A4%ED%84%B0-%F0%9F%92%AF-%EC%B4%9D%EC%A0%95%EB%A6%AC#:~:text=%EC%A0%95%EB%A6%AC%ED%95%98%EC%9E%90%EB%A9%B4%2C%20awk%EB%8A%94%20%EB%AA%85%EB%A0%B9,%EB%AC%B8%EC%9D%B4%EB%9D%BC%EA%B3%A0%20%EC%83%9D%EA%B0%81%ED%95%B4%EB%8F%84%20%EB%90%9C%EB%8B%A4.)
 - [shell명령어 정리 굿](https://nomad-programmer.tistory.com/m/329)
+
