공부한 내용 추가

--- a/기타/정규표현식.md
+++ b/기타/정규표현식.md
@@ -30,10 +30,17 @@ https://soooprmx.com/archives/7718
             System.out.println(matcher2.group(1));
         }
 
-        Matcher matcher3 = compile.matcher(target1);
+        Matcher matcher3 = compile.matcher(multi);
         assertFalse(matcher3.matches());//matcher.matches() => "^[Pattern]$" , 앞에서 뒤까지 모두 일치해야하니깐 하나밖에 안나온다고 생각해서 그런지 다음 일치하는걸로 넘어가는 find와 같이 while문 돌리면 무한루프..(위 lookingAt도 마찬가지)
 
     }
+
+    Matcher 클래스의 주요 메서드
+      find()	문자열에서 패턴과 일치하는 부분이 있는지 확인  
+      lookingAt()	문자열이 주어진 패턴으로 시작하는지 확인
+      matches()	문자열 전체가 주어진 패턴과 일치하는지 확인
+      replaceAll()	일치하는 부분을 모두 치환
+      replaceFirst()	처음 일치하는 부분만 치환
 
 
 ```
@@ -71,7 +78,7 @@ https://soooprmx.com/archives/7718
 
 | Chracter | 뜻               |
 | -------- | ---------------- |
-| `\b`     | 단어 경계        |
+| `\b`     | 단어 경계 (`\w`에 해당하는 문자와 `\W`에 해당하는 부분의 경계를 의미)        |
 | `\B`     | 단어 경계가 아님 |
 | `^`      | 문장의 시작      |
 | `$`      | 문장의 끝        |
@@ -84,7 +91,7 @@ https://soooprmx.com/archives/7718
 | `.`      | 어떤 글자 (줄바꿈 문자 제외) |
 | `\d`     | digit 숫자                   |
 | `\D`     | digit 숫자 아님              |
-| `\w`     | word 문자                    |
+| `\w`     | word 문자  (a-z, A-Z, 0-9, _)    |
 | `\W`     | word 문자 아님               |
 | `\s`     | space 공백                   |
 | `\S`     | space 공백 아님              |
@@ -164,3 +171,17 @@ https://soooprmx.com/archives/7718
 - [나름 상세한 설명](https://gocoding.tistory.com/93)
 
 - [매우매우굿](https://velog.io/@koseungbin/%EC%A0%95%EA%B7%9C-%ED%91%9C%ED%98%84%EC%8B%9D)
+- [`\b` `\B` 설명](https://choonse.com/2022/06/01/1033/)
+  - 단어 단위로 문자열을 찾고 싶은경우는 아래와 같이 사용하면됨
+    - ex
+      - \bto\b
+        - She told me not to go. // 여기서 told는 찾지않고, 전치사 to만 찾음. \b가 앞뒤로 되어이있기때문. 만약, 뒤에 \b가 없으면 told도 같이 찾음
+  - 단어안에서 찾고 싶은 경우 (혹은 비단어 안에서 찾고 싶은 경우)
+    - ex
+      - \Bto\B
+        - abtoas // to를 찾음. b가 to 앞에 없으면 못찾음. b와 t사이는 단어와 비단어의 경계가 아니고(\B), o와 a사이에도 단어와 비단어의 경계가 아니기때문
+        - -to- // to를 못찾음. 비단어인 -와 단어인 t사이는 단어와 비단어의 경계(\b)이기때문에 찾지 못함 
+      - \B!\B
+        - -!-  // !찾음. 비단어인 -와 비단어인 !사이는 단어와 비단어의 경계가 아니기(\B)떄문
+        - ab!ab  // !못찾음. 단어(b)와 비단어(!)의 경계에 있기때문!
+         
