공부한 내용 추가

--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -21,12 +21,19 @@
   - 소켓은 `<protocol>`,`<src addr>`, `<src port>`, `<dest addr>`, `<dest port>` 이 5개 값이 유니크하게 구성된다. 따라서 서버 포트가 추가되거나 클라이언트의 IP가 추가될 경우 그 만큼의 새로운 쌍을 생성할 수 있어 TIME_WAIT가 많이 남아 있어도 별 문제가 없다.
     - 로컬 포트가 고갈되었어도, 상대방 포트가 다르다면, 동일한 로컬 포트를 함께 쓰는게 가능하다. 같은 원리로 서버도 하나의 포트에 여러개의 소켓이 할당된다.
   - 소켓의 수는 설정된 리눅스 파일 디스크립터만큼 생성할 수 있다
+  - client를 받는 서버에서 TIME_WAIT이 많이 생기면 문제가 없나?
+    - 서버에는 TIME_WAIT 상태로 남아 있는 소켓이 **SYN를 수신하면 재사용**하게된다. client나 server 양쪽에 **별도 설정 필요없다.**
+    - 그러나 여기서 중요한것은 서버에 TIME_WAIT이 남아있는 상태에서, 서버가 죽었을경우, 다시 서버를 기동하려하면 이미 사용중이라는 "Address already in use" 문구를 만나고 에러를 뱉게된다
+      - 이때, SO_REUSEADDR 옵션을 적용하면 바로 기동이 가능하다
+      - 즉, SO_REUSEADDR은 서버에게 적용되는 옵션이다 (클라이언트가 아니다)
   
 ----
 
 - connection timeout vs socket timeout 
   - A connection timeout is the maximum amount of time that the program is willing to wait to setup a connection to another process. You aren't getting or posting any application data at this point, just establishing the connection, itself.
+    - connection을 맺는동안에 일어나는 timeout
   - A socket timeout is the timeout when waiting for individual packets. It's a common misconception that a socket timeout is the timeout to receive the full response. So if you have a socket timeout of 1 second, and a response comprised of 3 IP packets, where each response packet takes 0.9 seconds to arrive, for a total response time of 2.7 seconds, then there will be no timeout.
+    - 패킷하나에 대한 timeout (단위가 패킷이다!!)
   - https://stackoverflow.com/questions/7360520/connectiontimeout-versus-sockettimeout
 - read timeout
   - 커넥션은 정상적으로 맺어졌지만, 클라이언트가 요청 후 일정시간동안 서버로부터 응답이 없을떄 나타나는 타임아웃
