공부한 내용 추가

--- a/네트워크/기타 네트워크관련 정리.md
+++ b/네트워크/기타 네트워크관련 정리.md
@@ -266,6 +266,9 @@
     - 16~64GB 메모리는 8GB정도의 swap 공간을 사용할것을권고
   - [프로세스별 swap 사용확인](https://ninetin.tistory.com/30)
   
+- traceroute [도메인/ip]
+  - 목적지 ip로 어떻게 나가는지 알 수 있음
+  - 즉, 내 ip가 지금 뭐로 나가는지도 확인가능
 
 - 기타 참고사이트
   - https://meetup.toast.com/posts/54
