--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -294,3 +294,19 @@
         - 그러나 Element가 추가 또는 삭제되면 모든 Visitor에 변경이 일어나게됨.. 그렇기에 Element가 고정 + Element의 기능추가필요할때 사용하기 좋은패턴
     - 정리굿 : https://thecodinglog.github.io/design/2019/10/29/visitor-pattern.html
       - https://velog.io/@2yeseul/%EB%94%94%EC%9E%90%EC%9D%B8-%ED%8C%A8%ED%84%B4-Visitor
+    - 예제
+      - `BeanDefinitionVisitor`
+        - chatgpt 설명
+          ```md
+            `BeanDefinitionVisitor` 클래스는 Spring 프레임워크의 일부로, Visitor 디자인 패턴을 기반으로 합니다. 이 클래스는 주로 Spring의 빈 정의(`BeanDefinition`)를 순회하고 조작하는 데 사용됩니다. `BeanDefinition`은 Spring 컨테이너에서 빈의 구성을 정의하는 핵심 객체입니다.
+            Visitor 패턴의 특징은 객체 구조를 순회하면서 각 객체에 대한 특정 작업을 수행한다는 점입니다. `BeanDefinitionVisitor`는 이 패턴을 적용하여, 각 `BeanDefinition` 객체에 대해 필요한 작업(예: 속성 값 변경, 프로퍼티 수정)을 수행합니다. 이는 빈의 구성을 프로그래매틱하게 변경할 수 있게 해주며, 런타임에 동적으로 빈의 설정을 변경하는 고급 사용 사례에서 유용합니다.
+
+            이 클래스는 Spring의 내부 작업에 주로 사용되며, 사용자 정의 빈 처리 로직이나 Spring 확장 기능 개발 시에 중요한 역할을 합니다. Spring 컨테이너가 빈을 생성하고 관리하는 방식을 맞춤화하려는 경우에 특히 유용할 수 있습니다.
+          ```
+    - https://en.wikipedia.org/wiki/Visitor_pattern#
+      - 어떤 문제를 해결하기 위한 패턴?
+        - 클래스(element)에 변경없이 객체의 동작을 추가할수있게해줌
+      - 어떻게 구현?
+        - Visitor 객체를 통해 객체(element)의 동작을 구현한다
+        - Element 객체에 방문자(Visitor)객체를 전달해주면, Element 객체는 방문자 객체에 동작(Element의 행동)을 디스패치(위임) 한다. 이런 방문자(accepted visitor)객체는 element에 따른 동작을 수행하게되는데, 이를 element에 방문(visit)했다고 표현하는듯 (visitor객체가 element의 값을 사용하고 동작을 수행하니 방문이라는 말이 괜찮은듯)
+          - Clients traverse the object structure and call a dispatching operation accept (visitor) on an element — that "dispatches" (delegates) the request to the "accepted visitor object". The visitor object then performs the operation on the element ("visits the element").
