--- a/java/jvm/가비지 컬렉션.md
+++ b/java/jvm/가비지 컬렉션.md
@@ -66,16 +66,18 @@
   - Young 영역에서는 Eden영역과 두개의 Survivor 영역이 있다
     - Eden 영역에 최초로 객체가 만들어지고, Survivor 영역을 통해서 Old 영역으로 오래 살아남은 객체가 이동한다
     
-  - Old 영역 GC
+  - GC의 종류
     - Serial GC
       - mark-sweep-compact 알고리즘사용
       - Old영역에 살아있는 객체를 mark하고, 그걸로인해 mark되지않은 객체를 sweep한다. 
     - Parallel GC
+      - serial gc와 기본 알고리즘은 동일하나, 병렬처리로(멀티스레드) 진행
     - Parallel Old GC(Parallel Compacting GC)
     - Concurrent Mark & Sweep GC(이하 CMS)
     - G1(Garbage First) GC 
       - G1 GC는 바둑판의 각 영역에 객체를 할당하고 GC를 실행한다.
       - Young의 세가지 영역에서 데이터가 Old 영역으로 이동하는 단계가 사라진 GC 방식
+      - Heap 영역을 각 GC에서 목적에 알맞게 분리하여 사용
       - jdk 9부터 default GC
       - 
 
@@ -101,3 +103,9 @@
 - [](https://javabom.tistory.com/7)
 - [](https://youn0111.tistory.com/m/entry/Java-Garbage-CollectionGC%EB%9E%80-%EB%AC%B4%EC%97%87%EC%9D%B4%EA%B3%A0-%EB%8F%99%EC%9E%91%EB%B0%A9%EC%8B%9D%EC%97%90-%EB%8C%80%ED%95%B4)
 - ["HotSpot Virtual Machine Garbage Collection Tuning Guide"의 Java 8 버전부터 12 버전까지의 문서를 읽고 정리한 문서](https://johngrib.github.io/wiki/java-g1gc/)
+
+---
+
+- gc는 힙 메모리를 관리해준다.
+- java8의 디폴트 gc는 parallel gc 인데, 이는 기존 serial gc를 병렬화 한 것과 같다. serial gc에서는 힙 구조가 young 영역과 old 영역으로 나뉜다. young 영역에서는 eden, survivor0, survivor1 세가지 영역으로 나뉘는데, eden 영역이 가득 차면 살아있는 객체들은 survivor0 이나 1로 가게되는데 이를 minor gc라고 한다. 그리고 이를 반복하면서 s0과 s1에 지속적으로 살아있게되는 객체가 old 영역으로 가게된다. old 영역에서는 mark-sweep-compact 로 gc가 수행되는데, 살아있는 객체에 마킹을하고 그리고 마킹되지않은 것들은 sweep하고 난뒤 compact을 수행한다. 
+- java9의 디폴트 gc는 g1gc 인데, 힙 영역을 바둑판 배열로 쪼개어 gc를 수행하는데, 기존에 young영역에서 Old영역으로 가는 구조와 컨셉이 아예 다름. 바둑판 배열로 쪼개어진 부분이 가득차면 해당부분만 gc가 수행되는 구조이기떄문에, 힙 크기만큼 gc를 수행하는 기존 방식보다 훨씬 빠르다
