공부한 내용 추가

--- a/java/spring/예외처리.md
+++ b/java/spring/예외처리.md
@@ -254,4 +254,7 @@ spring:
   - SimpleUrlHandlerMapping 안쓰는것. 즉 정적 리소스 파일에 대한 핸들링 없는것. 
   - NoHandlerFoundException 을 유발해야할때 사용.. 기본적으로 SimpleUrlHandlerMapping 매핑경로가 /** 이기때문에 url 요청시 실제 없는 경로인데도 SimpleUrlHandlerMapping이 이를 매칭하게되어, NoHandlerFoundException 예외가 발생하지않게됨. 그래서 처리할수 없는 요청에 대해 NoHandlerFoundException을 발생시키기위해 사용
     - 그런데, 404 not found같은 경우, 그냥 기본 에러처리하는 컨트롤러 구현해도 해결가능 (물론, 다시 서블릿에서 /error 경로로 포워딩되어 상대적으로 성능상 느리긴하겠지만.. 크게 문제될건 없을듯)
-    
+
+---
+
+- [에러핸들링 하는 여러 방법 소개](https://www.baeldung.com/exception-handling-for-rest-with-spring)
