공부한 내용 추가

--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -22,6 +22,7 @@
               - 좀더 의미를 명확하게 할수있는것은 메서드참조!
               - 심플하게 전달해줄수잇는것은 람다표현식
               - 코드의 명확성이 항상 중요하기때문에, 간단한거면 람다표현식을, 로직이 복잡해지면 메서드참조를 사용하자!
+            - 자바 8부터는 클래스에 추상메서드 하나 있는 함수형 인터페이스의 구조라면 람다표현식을 사용할 수 있게되었다. 그래서 람다표현식은 간단하게 메서드하나에 대한 구현의 모습을 띄는데, 이를 변수에 할당도 되고, 파라미터로 사용도되고, 리턴값으로도 쓸 수 있는 즉, "값"으로 사용할 수 있다. 이렇게 사용가능한것을 **일급객체**라고 부르는데, 자바는 메서드(함수)를 일급객체로 사용할 수 없는 언어이나, 일급객체**처럼** 사용할 수 있도록 해준게 람다표현식이라고 생각하면 될듯하다
         
       - 인터페이스의 디폴트 메서드
         - 인터페이스에 무언가 변경이 필요하면, 기존 해당 인터페이스를 구현하는 모든 클래스의 구현을 바꿔야했는데, 기존 구현을 고치지않고도 인터페이스를 바꿀수 있도록 해준것이 인터페이스의 디폴트메서드
