--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -105,6 +105,8 @@
 
 - 커맨드 패턴 
   - 요구사항을 객체로 캡슐화 가능, 매개변수를 써서 여러 가지 다른 요구사항을 집어넣을수도있으며, 요청 내역을 큐에 저장하거나 로그로 기록할수도있으며, 작업 취소기능도 지원가능..
+  - 명령(행동 즉, 메서드)을 요청하는곳과 수행하는곳을 분리시킬 수 있다. 이 분리의 핵심 클래스가 커맨드 객체이다. 인보커가 커맨드 객체를 호출해주고(execute), 커맨드 객체에는 리시버라는 실제 요청을 수행하는 놈이 있다. 이렇게 분리되어있으니, 명령에 대한 추가 요구사항이 있을때 인보커와 같은 코드는 건드릴 필요없이 요구사항에 맞는 커맨드 객체만 추가해주면 끝. 
+    - 스레드풀이 커맨드패턴을 응용한 대표적인 사례. (스레드풀(인보커)에 작업수행하는 Runnable(커맨드객체)을 넘겨주면, 인보커 내부에 있는 스레드풀의 스레드가 Runnable을 실행시킨다. 즉, 작업에 대한 요청과 수행을 분리!)
   - 간단한 정리
     - 인보커
       - 커맨더 인터페이스를 실행하는역할(커맨드 인터페이스를 ***구성***)
