공부한 내용 추가

--- a/java/토비의스프링/토비의 스프링.md
+++ b/java/토비의스프링/토비의 스프링.md
@@ -421,7 +421,8 @@
         - 스프링 테스트 컨텍스트 프레임워크를 이용하는 테스트는 통합테스트! 가능하면 스프링의 지원없이 직접 코드레벨의 DI를 사용하면서 단위테스트하는게 좋음!(물론, 다 그렇게 되기는 어려움)
         - => 테스트를 잘 작성하면서 진행하지않으면 소스 리팩토링에 대한 "용기" 를 잃어버리기 때문에 코드의 품질은 떨어진다!!
     - 스프링의 빈(bean)은 기본적으로 클래스 이름과 프로퍼티로 정의되고, 스프링은 지정된 클래스 이름을 가지고 리플렉션을 이용해서 해당 클래스의 오브젝트를 만든다
-      - 리플랙션(reflection) 을 사용하면 private 생성자도 만들어주기때문에(reflection은 private 접근규약을 위한가능), private 생성자로 되어있는 오브젝트를 빈으로 등록할때 스태틱메소드로 객체를 생성해서 빈으로 등록해주어야한다!
+      - 리플랙션(reflection) 을 사용하면 private 생성자도 만들어주기때문에(reflection은 private 접근규약을 위반가능), private 생성자로 되어있는 오브젝트를 빈으로 등록할때 스태틱메소드로 객체를 생성해서 빈으로 등록해주어야한다!
+      - => 리플렉션API를 사용해서 빈들을 생성한다. 그래서 클래스 접근제어를 private으로 해도 `@Component` 선언이 되어있으면 스캔해간다. 뿐만아니라, Controller의 private 메서드에 어노테이션 맵핑 작업(ex. `@GetMapping`, `@PostMapping` 등)을 하면 스프링에서 문제없이 호출해준다 (DispatcherServlet이 reflection의 Method 클래스 invoke 메서드 실행하여 동작)
     - xml 설정시 Class 타입은 value를 이용해 클래스 또는 인터페이스의 이름을 넣어주면된다. 스프링은 프로퍼티의 타입이 Class인 경우는 value로 설정한 이름을 가진 Class 오브젝트로 자동변환해준다.
     - 다른 모듈의 DAO접근시에는 해당 DAO모듈을 갖는 서비스계층을 거쳐가자!
     - 테스트 프레임워크에서 @Transactional 사용시 자동으로 rollback된다! 이를 막기위해서는 @Rollback(false)를 함께 선언해준다!
