--- a/java/modern_java/모던자바인액션.md
+++ b/java/modern_java/모던자바인액션.md
@@ -71,6 +71,8 @@
       - 람다 표현식을 통해서 생성된 인스턴스는 (당연)힙영역에 저장된다. 이때 참조가아닌 캡처링을 통해서 외부변수를 사용한다..! 참조를 하게되면, 람다표현식을 호출하는 메서드 내의 로컬 변수가 있고, 람다 표현식은 그 로컬 변수를 사용한다는 가정하에, 해당 메서드가 리턴되었을때 로컬변수는 사라지게되는데, 그럼 람다표현식에서 참조하고있는 변수또한 사라지게된다.. 이를 막기위해 캡쳐링!
         - [참고](https://velog.io/@jylee9937/Java-Lambda%EC%99%80-Closure%EC%9D%98-%EA%B4%80%EA%B3%84)
           - 여기 내용에 외부변수 유무가 람다와 클로져 차이라 하는데, 아닌듯함..
+            - [이게맞는듯?](https://stackoverflow.com/questions/25055392/lambdas-local-variables-need-final-instance-variables-dont)
+            - [내용좋음](https://lordofkangs.tistory.com/362)
       - 자유변수란 파라미터로 넘겨진 변수가 아닌 외부에서 정의된 변수!
       - 자유변수중에서 힙에 올라가있는 인스턴스변수나 클래스 메모리에 올라가 있는 static변수의 경우는 람다 캡처링에 별 문제가없음.. 
       - 외부 지역변수를 가져올때가 주의해야함
