공부한 내용 추가

--- a/디자인패턴/디자인패턴_헤드퍼스트.md
+++ b/디자인패턴/디자인패턴_헤드퍼스트.md
@@ -224,6 +224,11 @@
       - => 두개의 계층구조(기존에 추상화된 부분 + 기존 구현부를 나타냈던 부분을 인터페이스를 사용함으로 생기는 부분)가 생기게됨! 이 둘의 관계를 브릿지 라고 부름.
     - 추상화한놈이 포함관계이있는 인터페이스로 가지고있기때문에, Client는 추상화한놈을 통해서 간접적으로 포함된 인터페이스를 실행시킬수있음..
       - 추상화한놈을 독립적으로 확장할수있고, 포함관계에 있는 인터페이스도 독립적으로 확장할수있는 형태이며 이 둘을 bridge와 같이 연결해놓았기때문에 브릿지패턴
+    - 클래스 폭발을 막을 수 있다..
+      - TvRemote, RadioRemote, EtcRemote, TvAdvancedRemote, RadioAdvancedReomte, EtcAdvancedRemote 
+        - 여기서 Tv, Radio, Etc에 더 추가되면 추가에 따른 Remote와 AdvancedRemote를 또 만들어줘야함
+        - 그리고 Remote관련한부분에 SuperRemote 같은게 추가되면 Tv, Radio, Etc를 만들어줘야함
+      - 여기서 브릿지패턴을 사용하여 Device를 인터페이스(bridge패턴에서 Implementor) 놓고, Remote(bridge패턴에서 Abstraction)에 Device를 구성하고있게되면, SuperRemote를 생성했을때 Device는 별도로 추가되는게없음.(코드 변경이 필요없다)
     - 장점
       - 구현을 인터페이스에 완전히 결합시키지 않았기때문에 구현과 추상회된 부분을 분리가능(브릿지 관계)
       - 추상화된 부분과 실제 구현부분을 독립적으로 확장 가능(계층이 따로 분리되어있는 상태이므로가능)
@@ -231,6 +236,216 @@
         - client는 추상화된 놈을 바라보고있으니.. 당연 영향 없음
     - 단점
       - 디자인 복잡해짐...
+    - 코드예시
+      ```java
+      // 구현(Implementation) 인터페이스
+      interface Device {
+          boolean isEnabled();
+          void enable();
+          void disable();
+          int getVolume();
+          void setVolume(int volume);
+          int getChannel();
+          void setChannel(int channel);
+      }
+
+      // 구현체(ConcreteImplementation) 클래스들
+      class TV implements Device {
+          private boolean on = false;
+          private int volume = 30;
+          private int channel = 1;
+
+          @Override
+          public boolean isEnabled() {
+              return on;
+          }
+
+          @Override
+          public void enable() {
+              on = true;
+              System.out.println("TV turned on");
+          }
+
+          @Override
+          public void disable() {
+              on = false;
+              System.out.println("TV turned off");
+          }
+
+          @Override
+          public int getVolume() {
+              return volume;
+          }
+
+          @Override
+          public void setVolume(int volume) {
+              // TV 볼륨 범위를 0-100으로 제한
+              this.volume = Math.min(100, Math.max(0, volume));
+              System.out.println("TV volume set to " + this.volume);
+          }
+
+          @Override
+          public int getChannel() {
+              return channel;
+          }
+
+          @Override
+          public void setChannel(int channel) {
+              this.channel = channel;
+              System.out.println("TV channel set to " + this.channel);
+          }
+      }
+
+      class Radio implements Device {
+          private boolean on = false;
+          private int volume = 20;
+          private int channel = 88; // FM 주파수
+
+          @Override
+          public boolean isEnabled() {
+              return on;
+          }
+
+          @Override
+          public void enable() {
+              on = true;
+              System.out.println("Radio turned on");
+          }
+
+          @Override
+          public void disable() {
+              on = false;
+              System.out.println("Radio turned off");
+          }
+
+          @Override
+          public int getVolume() {
+              return volume;
+          }
+
+          @Override
+          public void setVolume(int volume) {
+              // 라디오 볼륨 범위를 0-50으로 제한 (TV와 다른 구현)
+              this.volume = Math.min(50, Math.max(0, volume));
+              System.out.println("Radio volume set to " + this.volume);
+          }
+
+          @Override
+          public int getChannel() {
+              return channel;
+          }
+
+          @Override
+          public void setChannel(int channel) {
+              // FM 주파수 범위 (88-108 MHz)
+              this.channel = Math.min(108, Math.max(88, channel));
+              System.out.println("Radio station set to " + this.channel + " MHz");
+          }
+      }
+
+      // 추상화(Abstraction) 클래스
+      abstract class Remote {
+          protected Device device;
+
+          // 브릿지 - 구현체를 참조함
+          public Remote(Device device) {
+              this.device = device;
+          }
+
+          public void togglePower() {
+              if (device.isEnabled()) {
+                  device.disable();
+              } else {
+                  device.enable();
+              }
+          }
+
+          public void volumeUp() {
+              device.setVolume(device.getVolume() + 10);
+          }
+
+          public void volumeDown() {
+              device.setVolume(device.getVolume() - 10);
+          }
+
+          public void channelUp() {
+              device.setChannel(device.getChannel() + 1);
+          }
+
+          public void channelDown() {
+              device.setChannel(device.getChannel() - 1);
+          }
+      }
+
+      // 개선된 추상화(RefinedAbstraction) 클래스들
+      class BasicRemote extends Remote {
+          public BasicRemote(Device device) {
+              super(device);
+          }
+          
+          // 기본 리모컨 기능만 가짐 (상위 클래스에서 상속받은 기능들)
+      }
+
+      class AdvancedRemote extends Remote {
+          public AdvancedRemote(Device device) {
+              super(device);
+          }
+
+          // 추가 기능: 음소거
+          public void mute() {
+              device.setVolume(0);
+              System.out.println("Muted");
+          }
+          
+          // 추가 기능: 채널 직접 설정
+          public void setChannel(int channel) {
+              device.setChannel(channel);
+          }
+          
+          // 추가 기능: 즐겨찾기 채널로 이동
+          public void goToFavoriteChannel(int favoriteNumber) {
+              // 즐겨찾기 채널 매핑 예시
+              int[] favorites = {5, 10, 15, 20, 25};
+              if (favoriteNumber >= 1 && favoriteNumber <= favorites.length) {
+                  System.out.println("Switching to favorite channel " + favoriteNumber);
+                  device.setChannel(favorites[favoriteNumber - 1]);
+              }
+          }
+      }
+
+      // 클라이언트 코드
+      public class BridgePatternDemo {
+          public static void main(String[] args) {
+              // TV와 기본 리모컨
+              Device tv = new TV();
+              Remote basicRemote = new BasicRemote(tv);
+              
+              System.out.println("=== TV with Basic Remote ===");
+              basicRemote.togglePower();  // TV 켜기
+              basicRemote.channelUp();    // 채널 올리기
+              basicRemote.volumeUp();     // 볼륨 올리기
+              basicRemote.togglePower();  // TV 끄기
+              
+              System.out.println("\n=== TV with Advanced Remote ===");
+              AdvancedRemote advancedRemote = new AdvancedRemote(tv);
+              advancedRemote.togglePower();  // TV 켜기
+              advancedRemote.setChannel(15); // 채널 직접 설정
+              advancedRemote.mute();         // 음소거 기능 사용
+              advancedRemote.goToFavoriteChannel(2); // 즐겨찾기 채널 사용
+              
+              // 동일한 리모컨으로 라디오 제어
+              System.out.println("\n=== Radio with Advanced Remote ===");
+              Device radio = new Radio();
+              // 이미 생성된 advancedRemote의 device를 radio로 변경
+              // 실제로는 새 리모컨 객체를 생성하는 것이 좋음
+              advancedRemote = new AdvancedRemote(radio);
+              advancedRemote.togglePower();  // 라디오 켜기
+              advancedRemote.channelUp();    // 주파수 올리기
+              advancedRemote.volumeUp();     // 볼륨 올리기 (최대 50까지만 가능)
+              advancedRemote.setChannel(102); // 직접 주파수 설정
+          }
+      }
+      ```
   - 빌더 패턴
     - 장점
       - 복합객체가 생성되는 과정을 캡슐화
@@ -312,3 +527,203 @@
         - Visitor 객체를 통해 객체(element)의 동작을 구현한다
         - Element 객체에 방문자(Visitor)객체를 전달해주면, Element 객체는 방문자 객체에 동작(Element의 행동)을 디스패치(위임) 한다. 이런 방문자(accepted visitor)객체는 element에 따른 동작을 수행하게되는데, 이를 element에 방문(visit)했다고 표현하는듯 (visitor객체가 element의 값을 사용하고 동작을 수행하니 방문이라는 말이 괜찮은듯)
           - Clients traverse the object structure and call a dispatching operation accept (visitor) on an element — that "dispatches" (delegates) the request to the "accepted visitor object". The visitor object then performs the operation on the element ("visits the element").
+
+
+---
+
+캡슐화란 (코파일럿)
+
+안녕하세요! 캡슐화(encapsulation)에 대해 예제와 함께 자세히 설명드리겠습니다.
+
+---
+
+## **캡슐화(Encapsulation)란 무엇인가?**
+
+**캡슐화**는 객체 지향 프로그래밍(Object-Oriented Programming, OOP)의 핵심 개념 중 하나로, **데이터와 이를 처리하는 메서드를 하나의 단위로 묶고, 외부로부터 접근을 제한**하는 것을 의미합니다. 이를 통해 객체의 내부 구현을 숨기고, 외부에서는 정의된 인터페이스를 통해서만 상호 작용할 수 있도록 합니다.
+
+### **주요 목적**
+
+- **정보 은닉(Information Hiding)**: 객체의 내부 상태와 동작을 외부에 노출하지 않음으로써, 데이터의 무결성을 보호하고 변경에 유연하게 대응할 수 있습니다.
+- **모듈화(Modularity)**: 코드를 논리적인 단위로 분리하여 관리하기 쉽게 만듭니다.
+- **유지 보수성 향상**: 내부 구현 변경 시 외부에 미치는 영향을 최소화하여 유지 보수를 용이하게 합니다.
+
+---
+
+## **예제: 자바(Java)로 알아보는 캡슐화**
+
+### **1. 기본 예제: 은행 계좌 클래스**
+
+```java
+public class BankAccount {
+    // 프라이빗 멤버 변수: 외부에서 직접 접근 불가
+    private String accountNumber;
+    private double balance;
+
+    // 생성자
+    public BankAccount(String accountNumber) {
+        this.accountNumber = accountNumber;
+        this.balance = 0.0;
+    }
+
+    // 퍼블릭 메서드: 외부에서 접근 가능
+    public void deposit(double amount) {
+        if (amount > 0) {
+            this.balance += amount;
+            System.out.println(amount + "원이 입금되었습니다.");
+        } else {
+            System.out.println("입금 금액은 양수여야 합니다.");
+        }
+    }
+
+    public void withdraw(double amount) {
+        if (amount > 0 && this.balance >= amount) {
+            this.balance -= amount;
+            System.out.println(amount + "원이 출금되었습니다.");
+        } else {
+            System.out.println("잔액이 부족하거나 출금 금액이 유효하지 않습니다.");
+        }
+    }
+
+    public double getBalance() {
+        return this.balance;
+    }
+}
+```
+
+### **설명**
+
+- **프라이빗 멤버 변수** `accountNumber`, `balance`는 외부에서 직접 접근할 수 없습니다.
+- **퍼블릭 메서드** `deposit`, `withdraw`, `getBalance`를 통해서만 계좌의 잔액을 변경하거나 조회할 수 있습니다.
+- 이를 통해 **부적절한 접근이나 변경을 방지**하고, **데이터의 일관성**을 유지합니다.
+
+### **사용 예시**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        BankAccount account = new BankAccount("123-456-789");
+        account.deposit(50000);      // 50000원이 입금되었습니다.
+        account.withdraw(20000);     // 20000원이 출금되었습니다.
+        System.out.println("현재 잔액: " + account.getBalance() + "원");  // 현재 잔액: 30000원
+
+        // account.balance = 1000000; // 오류 발생: balance는 private 접근 제어자임
+    }
+}
+```
+
+- **직접 변수에 접근하려고 하면 컴파일 에러**가 발생합니다.
+- **메서드를 통한 접근만 허용**되어 데이터의 무결성을 보장합니다.
+
+---
+
+## **캡슐화의 이점**
+
+### **1. 데이터 보호**
+
+- **잘못된 데이터 변경 방지**: 외부에서 직접 변수에 접근할 수 없으므로, 부적절한 값으로 변경되는 것을 막습니다.
+- **데이터의 유효성 검증**: 메서드 내에서 입력 값의 검증을 수행하여 안전성을 높입니다.
+
+### **2. 유지 보수성 향상**
+
+- 내부 구현을 변경하더라도 **외부 인터페이스가 변경되지 않으면** 사용하는 코드에 영향을 주지 않습니다.
+- 시스템의 **복잡성을 줄이고**, **모듈 간의 결합도를 낮춥니다**.
+
+### **3. 코드 재사용성 증가**
+
+- 공통된 기능을 갖는 클래스를 만들어 **재사용**할 수 있습니다.
+- **객체 지향 원칙**을 따름으로써 **유연한 설계**가 가능합니다.
+
+---
+
+## **추가 예제: 학생 정보 클래스**
+
+```java
+public class Student {
+    private String name;
+    private int age;
+
+    // 생성자
+    public Student(String name, int age) {
+        this.name = name;
+        setAge(age); // 나이 검증을 위해 setter 사용
+    }
+
+    // 접근자와 설정자 메서드 (Getter와 Setter)
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    // 나이에 대한 유효성 검증 추가
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        if (age >= 0 && age <= 150) {
+            this.age = age;
+        } else {
+            System.out.println("유효하지 않은 나이입니다.");
+        }
+    }
+}
+```
+
+### **설명**
+
+- **`age` 변수에 대한 직접 접근**을 제한하고, **`setAge` 메서드 내에서 유효성 검증**을 수행합니다.
+- 이를 통해 **잘못된 데이터 입력을 방지**하고, 객체의 상태를 안정적으로 유지할 수 있습니다.
+
+### **사용 예시**
+
+```java
+public class Main {
+    public static void main(String[] args) {
+        Student student = new Student("홍길동", 20);
+        System.out.println(student.getName() + "의 나이는 " + student.getAge() + "세입니다.");
+
+        student.setAge(200); // 유효하지 않은 나이입니다.
+        System.out.println(student.getName() + "의 나이는 " + student.getAge() + "세입니다."); // 나이는 그대로 20세
+    }
+}
+```
+
+---
+
+## **캡슐화 구현 방법**
+
+1. **접근 제어자 사용**
+
+   - **`private`**: 클래스 내부에서만 접근 가능.
+   - **`public`**: 모든 클래스에서 접근 가능.
+   - **`protected`**, **`default`**: 상속 관계나 동일 패키지 내에서 접근 가능.
+
+2. **Getter와 Setter 메서드 사용**
+
+   - **Getter**: 프라이빗 변수의 값을 반환하는 메서드.
+   - **Setter**: 프라이빗 변수의 값을 설정하는 메서드로, 필요 시 유효성 검증을 포함.
+
+3. **인터페이스 사용**
+
+   - 필요한 기능만 외부에 노출하고, 구현 세부 사항은 숨깁니다.
+
+---
+
+## **캡슐화와 객체 지향 원칙**
+
+- **단일 책임 원칙(Single Responsibility Principle)**: 한 클래스는 하나의 책임만 가져야 합니다.
+- **개방-폐쇄 원칙(Open-Closed Principle)**: 클래스는 확장에 열려 있고, 변경에 폐쇄되어야 합니다.
+- **리스코프 치환 원칙(Liskov Substitution Principle)**: 서브클래스는 기반 클래스와 호환되어야 합니다.
+- **인터페이스 분리 원칙(Interface Segregation Principle)**: 특정 클라이언트를 위한 인터페이스 여러 개가 범용 인터페이스 하나보다 낫습니다.
+- **의존 역전 원칙(Dependency Inversion Principle)**: 추상화에 의존하며, 구체화에 의존하지 말아야 합니다.
+
+---
+
+## **마무리**
+
+캡슐화는 객체 지향 프로그래밍에서 **중요한 개념으로**, **데이터 보호**, **유지 보수성 향상**, **코드 재사용성 증가** 등의 이점을 제공합니다. 이를 통해 **안정적이고 유연한 소프트웨어 설계**가 가능해집니다.
+
+혹시 더 궁금한 점이나 추가로 알고 싶은 내용이 있으시면 언제든지 말씀해 주세요! 😊
